--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -4,4 +4,4 @@ project(test)
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_C_STANDARD 11)
 
-add_executable(test main.cpp ../pinned.c)
+add_executable(test main.cpp ../pinned.c ../pinned.h)
