--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -4,5 +4,5 @@ project(test)
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_C_STANDARD 11)
 
-add_executable(test main.cpp ../pinned.c ../pinned.h)
+add_executable(test test.cpp test.c test.h ../pinned.c ../pinned.h)
 add_executable(bench bench.cpp ../pinned.c ../pinned.h)
